# pcgw_api

./: .gitignore  README.md  pcgw.py  pyproject.toml  update_fields.py  utils.py
src/api_pcgw/: pcgw.py  tables.py  update_fields.py  utils.py
src/pcgw_api/: pcgw.py
